# histopathologic-cancer-detection

./: .gitignore  README.md  cancer-detection-cnn.ipynb  conda-env-metal.yml  dataset.py  device.py  image_dataset.py  main.ipynb  main.py  notebook.ipynb  prepare_dataset.py  pyproject.toml  requirements.txt  submission.csv
.github/workflows/: pylint.yml
submissions/: resnet50-20250824-013459.csv  simplecnn-20250824-013459.csv  submission_custom_cnn_20250723_001255.csv  submission_resnet_20250723_052356.csv  submission_resnet_finetuned_20250723_055925.csv  submission_simple_cnn_20250728_215848.csv  submission_simple_cnn_20250728_221154.csv  submission_simple_cnn_20250728_222202.csv
